tests/cases/standard-library/ok/context-argc.ari
fn main() -> i64 {
  return context::argc();
}

