tests/cases/standard-library/errors/prelude/std-use-without-implicit.ari
use std::io::write_i64;

fn main() -> i64 {
  write_i64(1);
  return 0;
}
